--- a/demo.html
+++ b/demo.html
@@ -18,10 +18,14 @@
 
         <div style="height:13px;"></div>
 
+        <!-- Buttons -->
         <a href="index.html"><button class="home-button">Project home</button></a>
-        <a href="https://arxiv.org/abs/2309.10740">
+        <a href="https://arxiv.org/abs/2309.10740" target="_blank">
           <button class="paper-button">Preprint paper</button>
         </a>
+        <a href="https://github.com/Consistency-TTA/consistency-tta.github.io" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>  
         <a href="evaluation.html"><button class="eval-button">Sample evaluation form</button></a>
 
         <div style="height:7px;"></div>
