--- a/evaluation.html
+++ b/evaluation.html
@@ -12,6 +12,7 @@
     <section class="section">
         <h1>Example Human Evaluation Form</h1>
         Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation<br><br>
+        <!-- Home button -->
         <a href="index.html"><button class="home-button">Project Home Page</button></a><br><br>
 
         <hr>
