Minor style change

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Demo Page</h1>
         <h3><b>Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation<br></b>
-            <a href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>, 
+            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>, 
             Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi
         </h3>
 
