New report; clarification in demo page

--- a/demo.html
+++ b/demo.html
@@ -37,6 +37,7 @@
             the consistency model without CLAP-fine-tuning, the diffusion baseline model, and the ground truth.</p>
         <p><b>The diffusion baseline queries the neural network 400 times per audio clip, 
             while the consistency models query a same-sized network only one time.</b></p>
+        <p>Since the models are not trained on speech data, we do not expect them to produce meaningful speeaches.</p>
 
         <hr>
         <h3>Prompt 0</h3>
