--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 
     <header>
         <h1>Accelerating Diffusion-Based Text-to-Audio<br>Generation with Consistency Distillation</h1>
-        <h3><a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>, 
+
+        <h3 style="font-weight: 400;">
+            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>, 
             Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi
         </h3>
-
-        <div style="height:13px;"></div>
+        <h4 class="institution">
+            <a style="color: #DDD; text-decoration: none" href="https://www.microsoft.com/applied-sciences" target=&blank;>
+                Microsoft Applied Science Group</a>, &nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="color: #DDD; text-decoration: none" href="https://me.berkeley.edu/" target=&blank;>
+                University of California, Berkeley</a>
+        </h4>
+        <div style="height: 13px;"></div>
 
         <!-- Buttons -->
         <a href="demo.html"><button class="demo-button">Demo page</button></a>
@@ -31,7 +38,7 @@
         </a>        
         <a href="evaluation.html"><button class="eval-button">Sample evaluation form</button></a>
 
-        <div style="height:7px;"></div>
+        <div style="height: 7px;"></div>
     </header>
 
     <section class="section">
