--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div id="bibtex1" class="bibtex" onclick="copyToClipboard('bibtex1')">
             <i class="far fa-copy copy-icon"></i>
 <pre>@article{bai2023accelerating,
-  author = {Yatong Bai, Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi},
+  author = {Bai, Yatong and Dang, Trung and Tran, Dung and Koishida, Kazuhito and Sojoudi, Somayeh},
   title = {Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation},
   journal={arXiv preprint arXiv:2309.10740},
   year = {2023}
