Add link to HuggingFace model checkpoints

--- a/diversity.html
+++ b/diversity.html
@@ -12,21 +12,26 @@
     <header>
         <h1>Generation Diversity</h1>
         <h3><b>Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation<br></b>
-            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>, 
-            Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi
+            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>,
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/trung-dang" target=&ldquo;blank&rdquo;><u>Trung Dang</u></a>,
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/dung-tran" target=&ldquo;blank&rdquo;><u>Dung Tran</u></a>,
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/kazuhito-koishida" target=&ldquo;blank&rdquo;><u>Kazuhito Koishida</u></a>,
+            <a class="title_link" href="https://people.eecs.berkeley.edu/~sojoudi" target=&ldquo;blank&rdquo;><u>Somayeh Sojoudi</u></a>
         </h3>
 
         <div style="height:13px;"></div>
 
         <!-- Buttons -->
-        <a href="index.html"><button class="home-button">Project home</button></a>
+        <a href="index.html"><button class="home-button">Project Home</button></a>
         <a href="https://arxiv.org/abs/2309.10740" target="_blank">
-            <button class="paper-button">Preprint paper</button>
+            <button class="paper-button">Preprint Paper</button>
         </a>
         <a href="https://github.com/Bai-YT/ConsistencyTTA" target="_blank">
             <button class="code-button"><i class="fab fa-github"></i>Code&nbsp;&nbsp;</button>
         </a>
-        <a href="evaluation.html"><button class="eval-button">Sample evaluation form</button></a>
+        <a href="https://huggingface.co/Bai-YT/ConsistencyTTA" target="_blank">
+            <button class="hf-button">Model Checkpoints</button>
+        </a>
 
         <div style="height:7px;"></div>
     </header>
