Add main figure

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
     <section class="section">
         <h2>Main Experiment Results</h2>
+        <center>
+            <img src="main_figure_.png" alt="ConsistencyTTA Results" title="Results" width="480"/>
+        </center>
         <p>
             Our method reduce the computation of the core step of diffusion-based text-to-audio generation by 
             a factor of 400, while observing minimal performance degradation in terms of 
