Add anonymous site

--- a/demo.html
+++ b/demo.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Consistency TTA Demo Page</title>
+    <title>ConsistencyTTA Demo Page</title>
 </head>
 
 <body>
     <header>
         <h1>Demo Page</h1>
-        <h3><b>Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation<br></b>
-            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>,
-            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/trung-dang" target=&ldquo;blank&rdquo;><u>Trung Dang</u></a>,
-            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/dung-tran" target=&ldquo;blank&rdquo;><u>Dung Tran</u></a>,
-            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/kazuhito-koishida" target=&ldquo;blank&rdquo;><u>Kazuhito Koishida</u></a>,
+        <h3><span style="font-weight: 900; font-size: 22px">ConsistencyTTA:</span>
+            <span style="font-weight: 500;">Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation</span><br>
+            <a class="title_link" href="https://bai-yt.github.io" target=&ldquo;blank&rdquo;><u>Yatong Bai</u></a>
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/trung-dang" target=&ldquo;blank&rdquo;><u>Trung Dang</u></a>
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/dung-tran" target=&ldquo;blank&rdquo;><u>Dung Tran</u></a>
+            <a class="title_link" href="https://www.microsoft.com/applied-sciences/people/kazuhito-koishida" target=&ldquo;blank&rdquo;><u>Kazuhito Koishida</u></a>
             <a class="title_link" href="https://people.eecs.berkeley.edu/~sojoudi" target=&ldquo;blank&rdquo;><u>Somayeh Sojoudi</u></a>
         </h3>
 
