--- a/evaluation.html
+++ b/evaluation.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Consistency TTA Model Human Eval</title>
+    <title>ConsistencyTTA Human Eval</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,7 +11,9 @@
 
     <section class="section">
         <h1>Example Human Evaluation Form</h1>
-        Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation<br><br>
+
+        <b>ConsistencyTTA: Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation</b><br>
+        Yatong Bai, Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi<br><br>
         <!-- Home button -->
         <a href="index.html"><button class="home-button">Project Home Page</button></a><br><br>
 
