Add link to HF spaces; remove anonymous pages

--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,9 @@
         <a href="https://arxiv.org/abs/2309.10740" target="_blank">
             <button class="paper-button">Preprint Paper</button>
         </a>
+        <a href="https://huggingface.co/spaces/Bai-YT/ConsistencyTTA" target="_blank">
+            <button class="livedemo-button">🤗 Live Demo</button>
+        </a>
         <a href="https://github.com/Bai-YT/ConsistencyTTA" target="_blank">
             <button class="code-button"><i class="fab fa-github"></i>Code&nbsp;&nbsp;</button>
         </a>
