--- a/evaluation.html
+++ b/evaluation.html
@@ -15,7 +15,7 @@
         <b>ConsistencyTTA: Accelerating Diffusion-Based Text-to-Audio Generation with Consistency Distillation</b><br>
         Yatong Bai, Trung Dang, Dung Tran, Kazuhito Koishida, Somayeh Sojoudi<br><br>
         <!-- Home button -->
-        <a href="index.html"><button class="home-button">Project Home Page</button></a><br><br>
+        <a href="index.html"><button class="home-button-wide">Project Home Page</button></a><br><br>
 
         <hr>
         <h3>Criteria for overall audio quality</h3>
