--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         <div style="height: 13px;"></div>
 
         <!-- Buttons -->
-        <a href="demo.html"><button class="demo-button">Demo Page</button></a>
+        <a href="demo.html"><button class="demo-button">Generation Examples</button></a>
         <a href="https://arxiv.org/abs/2309.10740" target="_blank">
             <button class="paper-button">Preprint Paper</button>
+        </a>
+        <a href="https://huggingface.co/spaces/Bai-YT/ConsistencyTTA" target="_blank">
+            <button class="livedemo-button">🤗 Live Demo</button>
         </a>
         <a href="https://github.com/Bai-YT/ConsistencyTTA" target="_blank">
             <button class="code-button"><i class="fab fa-github"></i>Code&nbsp;&nbsp;</button>
