Add ConsistencyTTA demo video

--- a/index.html
+++ b/index.html
@@ -79,9 +79,16 @@
 
     <section class="section">
         <h2>Main Experiment Results</h2>
-        <center>
-            <img src="main_figure_.png" alt="ConsistencyTTA Results" title="Results" width="480"/>
-        </center>
+        <div class="center-container">
+            <div class="content">
+                <img src="main_figure_.png" alt="ConsistencyTTA Results" title="Results" width="450"/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <video width="216" height="384" controls>
+                    <source src="demo_video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
+        </div>
         <p>
             Our method reduce the computation of the core step of diffusion-based text-to-audio generation by 
             a factor of 400, while observing minimal performance degradation in terms of 
