--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             <a style="color: #DDD; text-decoration: none" href="https://www.microsoft.com/applied-sciences" target=&blank;>
                 Microsoft Applied Science Group</a>, &nbsp;&nbsp;&nbsp;&nbsp;
             <a style="color: #DDD; text-decoration: none" href="https://me.berkeley.edu/" target=&blank;>
-                University of California, Berkeley</a>
+                University of California, Berkeley</a> 
         </h4>
-        <div style="height: 13px;"></div>
+        <h4 class="venue">
+            In <a class="venue_link" href="https://interspeech2024.org" target="_blank"><i>INTERSPEECH</i> 2024</a>
+        </h4>
 
         <!-- Buttons -->
         <a href="demo.html"><button class="demo-button">Generation Examples</button></a>
@@ -74,6 +76,9 @@
             We leverage this advantage to finetune ConsistencyTTA end-to-end with audio-space text-aware metrics,
             such as the CLAP score, further enhancing the generations.
             We use the CLAP loss as an example, confirming that end-to-end fine-tuning further boosts the generation quality.
+        </p>
+        <p>
+            <b>Please join us at <a href="https://interspeech2024.org" target="_blank">INTERSPEECH 2024</a> at Kos Island, Greece!</b>
         </p>
     </section>
 
